# bri17

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  LICENSE  README.md  config.cmake.in
cmake/: bri17config.cmake.in
docs/: annotated.html  api.html  bri17_8hpp_source.html  classbri17_1_1_cartesian_grid-members.html  classbri17_1_1_cartesian_grid.html  classbri17_1_1_hooke-members.html  classbri17_1_1_hooke.html  classes.html  cpp_api.html  dir_916743814435f4e2757fc708411ee2e1.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_vars.html  genindex.html  index.html  installation.html  menudata.js  namespacebri17.html  namespaces.html  objects.inv  pages.html  py-modindex.html  py_api.html  search.html  searchindex.js  theory.html  todo.html  tutorial.html
docs/_downloads/b830ab517c22f824f6bb7181f7662f11/: CMakeLists.txt
docs/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  classes_0.js  classes_1.js  namespaces_0.js  searchdata.js  variables_0.js  variables_1.js
example/: CMakelists.txt  README.md  example_bri17.cpp
include/: CMakeLists.txt
include/bri17/: bri17.hpp
metadata/: author.txt  description.txt  repository.txt
python/: .gitignore  CMakeLists.txt  bri17.cpp  demo.py  pybri17.cpp  setup.py
python/tests/: test_bri17.py
reference/: Q4_Q8_element.mac  element_stiffness_2d.mac
sphinx/: .gitignore  api.rst  conf.py  cpp_api.rst  index.rst  installation.rst  py_api.rst  theory.rst  tutorial.rst
sphinx/example/: CMakeLists.txt
sphinx/example/src/: bri17_example.cc
src/: CMakeLists.txt  bri17.cpp
test/: CMakeLists.txt  test_bri17.cpp
tests/: CMakeLists.txt  test_bri17.cpp
